giant instagram needs to stop being a jump scare

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -187,7 +187,7 @@
 .scalingimageicon {
   max-height: inherit;
   max-width: inherit;
-  margin: 1;
+  margin: 3;
   display: block;
   width: 3%
 }
